<resources>
    <string name="app_name">Aadhar Card to PAN Card Link Tips</string>
    <string name="ap_1">LINKING THE MOBILE NUMBER TO AADHAR FOR THE FIRST TIME</string>
    <string name="process_for_link">Process For Link</string>
    <string name="step_1">STEP 1</string>
    <string name="ap_des_1">● Collect the Aadhar update form and enter the accurate information along with your
             mobile number.
        \n\n● Alternatively, you can also download the form from UIDAI website.</string>
    <string name="step_2">STEP 2</string>
    <string name="ap_des_2">● Mention on the form that only your phone number needs to be updated.
        \n\n● Submit it to the concerned officer along with a photocopy of your aadharcard and one photo ID Proof such as PAN
             card, Voter id,passport etc.</string>
    <string name="step_3">STEP 3</string>
    <string name="ap_des_3">● The next step will be verification of your thumb impression and bio metrics.
        \n\n● It will be matched with the ones recorded during the Aadhar application process.</string>
    <string name="step_4">STEP 4</string>
    <string name="step_5">STEP 5</string>
    <string name="step_6">STEP 6</string>
    <string name="step_7">STEP 7</string>
    <string name="step_8">STEP 8</string>
    <string name="step_9">STEP 9</string>
    <string name="ap_des_4">● The officer will give you an acknowledgement slip, you can expect the update to
             take place within five days.
       \n\n● However, it could even take up to 10 days as per UIDAI website.</string>
    <string name="ap_2">RE-VERIFYING YOUR MOBILE NUMBER WITH AADHAR</string>
    <string name="ver_des_1">● Most service providers have direct links for the process.
       \n\n● You can enter your mobile number on your service provider website.</string>
    <string name="ver_des_2">● You will get an OTP on your registered number which you will have to enter on the
         website.</string>
    <string name="ver_des_3">● Next, you will hav to check the consent box that will appear after you enter
         your aadhar number.</string>
    <string name="ver_des_4">● The telecom service providers will then request UIDAI for OTP.
       \n\n● if your number is updated, you will receive an OTP from UIDAI.</string>
    <string name="ver_des_5">● You will again get a consent message that needs to be checked.
       \n\n● You will have to enter the received OTP to complete the verification process.</string>
    <string name="ver_des_6">● Finally, you will receive a message stating that your mobile number has been
          re-verified.</string>
    <string name="ver_des_7">● Alternatively, users can also resort to the interactive voice response system
          (IVRS) provided by your telecom service provider.
           \n\n● The process will be similar to online procedure expect for the fact that the voice based system will guide you in the process.
           \n\n● The government of india has also directed the telecom operators to ensure agent-assisted verification for the
          differently-able citizens.
          \n\n● The aadhar mobile linking is expected to eliminate all the fake mobile numbers proceed on forged documents.</string>
    <string name="ap_3">WHY LINK IS REQUIRED?</string>
    <string name="why_des">
       ➟ Why Link Aadhar With Pan ?\n\n
        ● Both the PAN card as well as the Aadhaar card are unique identification cards that serve as proof of identity that are necessary
        for registration and verification purposes.
        \n\n● The government has urged all entities to link their PAN cards with their Aadhaar cards.
        \n\n ➟ This is being done for the following purposes:\n\nPrevent Tax Evasion :
        \n\n● By linking the Aadhaar and PAN cards, the government will be able to keep tabs on the taxable transactions of a
        particular individual or entity, whose identity and address will be verified by his Aadhaar card.
        \n\n● This will effectively mean that every taxable transaction or activity will be recorded by the government.
        \n\n● As a result, the government will already have a detailed record of all the financial transactions that
        would attract tax for each entity, making tax evasion a thing of the past.
        \n\n ➟ Multiple PAN Cards :
        \n\n● Another
        reason for linking PAN with Aadhaar is to reduce the occurrence of individuals or entities applying for
        multiple PAN cards in an effort to defraud the government and avoid paying taxes.
        \n\n● By applying for more than one PAN card, an entity can use one of the cards for a certain set of
        financial transactions and pay taxes applicable for those.
        \n\n● Meanwhile, the other PAN card can be used for accounts or transactions that the entity
        wishes to conceal from the Income Tax department, thereby avoiding paying tax on them.
        \n\n● By linking the PAN and Aadhaar card, the government will be able to link the identity of an
        entity through his/her Aadhaar card, and subsequently have details of all financial transactions
        made through the linked PAN card.
        \n\n● If there are multiple PAN cards registered under the same name, the government will be able
        to identify the same and take corrective action.</string>
    <string name="ap_4">WHAT IS AADHAR &amp; PAN?</string>
    <string name="what_panadhar_4">● The income tax department of India issues a laminated card which states the
      unique Permanent Account Number (PAN) and other identity details of any person who has applied to obtain a
      PAN Card.
      \n\n● The Permanent Account Number (PAN) was introduced by the Indian Income Tax Department in order to
      facilitate easy retrieval of information and matching information relating to an assess investment, payment
      of taxes, tax demand, tax arrears, raising of loans, assessment, etc. as a universal identification.</string>
    <string name="ap_5">REQUIRED DOOCUMENTS TO LINK\n AADHAR &amp; PAN</string>
    <string name="req_docs_tolink">Required Documents:
        \n\n● Following documents are required to link Aadhaar to PAN
        \n\n❖ Valid PAN Card
        \n❖ Aadhaar Number
        \n❖ Valid Phone Number
        \n\n● This article is intended for informational purposes only.
        \n\n● For more information please refer the link(s) provided above or visit
        \n\n❖ https://uidai.gov.in/ &amp;
        \n❖ https://eportal.incometax.gov.in/</string>
    <string name="ap_6">LINK PAN &amp; AADHAR DETAILS</string>
    <string name="link_details">Know How to Link Aadhaar Number to PAN Card
        \n\n ● Method 1:
        \n\n  ❖ Link Online
        \n  ❖ Copy/Open link given below
      \n  ❖ Enter PAN Card Number, Aadhaar Number, Name as per Aadhaar Card and Mobile Number
      \n  ❖ Check/Tick if only year of birth in Aadhaar card mentioned
      \n  ❖ Click on Link Aadhaar button
      \n  ❖ Enter OTP you received and Click on Validate button Click to open link
      \n\n\n ● Method 2:
        \n\n  ❖ Link Offline
      \n  ❖ Using SMS Link Aadhaar with their PAN, using an SMS-based facility.
        \n  ❖ It can be done by sending an SMS to either 567678 or 56161.</string>
    <string name="ap_7">NEW PAN STATUS</string>
    <string name="ap_8">VERIFY YOUR PAN DETAILS</string>
    <string name="ap_9">ITR RECEIPT STATUS</string>
    <string name="ap_10">LINK AADHAR TO PAN CARD</string>
    <string name="ap_11">CHECK AADHAR STATUS</string>
    <string name="ap_12">LINK NOW</string>
    <string name="ap_13">AADHAR CENTER LIST</string>
    <string name="ap_14">DOWNLOAD E-AADHAR?</string>
    <string name="ap_15">CHECK AADHAR STATUS?</string>
    <string name="aadharcard_to_pan_link">AadharCard To PAN Link</string>
    <string name="aadhar_to_number_link">Aadhar To Number Link</string>
    <string name="pancard_pe_loan">Pancard Pe Loan</string>
    <string name="aadhar_pe_loan">Aadhar Pe Loan</string>
    <string name="steps_to_link_aadhar_with_mobile_number_through_otp">STEPS TO LINK AADHAR WITH MOBILE NUMBER THROUGH OTP</string>
    <string name="what_is_pan">WHAT IS PAN?</string>
    <string name="who_can_apply_for_pan">WHO CAN APPLY FOR PAN?</string>
    <string name="who_can_apply_on_behalf_of_minor_foolish_retarded_and_dead">WHO CAN APPLY ON BEHALF OF MINOR, FOOLISH, RETARDED AND DEAD</string>
    <string name="do_i_need_to_apply_for_a_new_pan_when_i_move_from_one_city_to_another">DO I NEED TO APPLY FOR A NEW PAN WHEN I MOVE FROM ONE CITY TO ANOTHER?</string>
    <string name="can_i_get_more_than_one_pan">CAN I GET MORE THAN ONE PAN?</string>
    <string name="what_should_i_do_if_i_have_more_than_one_pan">WHAT SHOULD I DO IF I HAVE MORE THAN ONE PAN?</string>
    <string name="is_any_third_party_used_for_verification_of_identity_with_genuineness_of_the_person">IS ANY THIRD PARTY USED FOR VERIFICATION OF IDENTITY WITH GENUINENESS OF THE PERSON?</string>
    <string name="is_email_id_mandatory_to_get_e_pan">IS EMAIL ID MANDATORY TO GET E-PAN?</string>
    <string name="what_is_the_annual_information_return_air">WHAT IS THE ANNUAL INFORMATION RETURN(AIR)?</string>
    <string name="is_any_third_party_used_for_verification_of_identity_with_genuineness_of_the_document">IS ANY THIRD PARTY USED FOR VERIFICATION OF IDENTITY WITH GENUINENESS OF THE DOCUMENT?</string>
    <string name="should_an_organization_that_files_air_file_a_single_air_for_the_entire_process">SHOULD AN ORGANIZATION THAT FILES AIR, FILE A SINGLE AIR FOR THE ENTIRE PROCESS?</string>
    <string name="who_is_authorized_to_get_air">WHO IS AUTHORIZED TO GET AIR?</string>
    <string name="e_pan_card_eligibility_and_application_procedure">E-PAN CARD-ELIGIBILITY AND APPLICATION PROCEDURE.</string>
    <string name="eligibility_for_e_pan_quarterly">ELIGIBILITY FOR E-PAN QUARTERLY.</string>
    <string name="what_is_e_tds_tcs_statement">WHAT IS E-TDS / TCS STATEMENT?</string>
    <string name="who_should_file_e_tds_tcs_details">WHO SHOULD FILE E-TDS / TCS DETAILS?</string>
    <string name="e_tds_tcs_details_made_mandatory_for_government_deductors_how_can_i_know">E-TDS / TCS DETAILS MADE MANDATORY FOR GOVERNMENT DEDUCTORS.HOW CAN I KNOW?</string>
    <string name="under_which_provision_should_e_tds_tcs_details_be_recorded">UNDER WHICH PROVISION SHOULD E-TDS / TCS DETAILS BE RECORDED?</string>
    <string name="who_is_the_e_filing_administrator">WHO IS THE E-FILING ADMINISTRATOR?</string>
    <string name="who_is_the_e_tds_tcs_intermediate">WHO IS THE E-TDS / TCS INTERMEDIATE?</string>
    <string name="can_we_get_details_about_form_15ca_or_can_we_re_print_our_form_15ca">CAN WE GET DETAILS ABOUT FORM 15CA? OR CAN WE RE-PRINT OUR FORM 15CA?</string>
    <string name="what_is_aadhar">WHAT IS AADHAR?</string>
    <string name="update_your_aadhar_details">UPDATE YOUR AADHAR DETAILS?</string>
    <string name="check_your_status">CHECK YOUR STATUS</string>
    <string name="update_the_address_in_your_aadhar">UPDATE THE ADDRESS IN YOUR AADHAR</string>
    <string name="request_for_address_validation_letter">REQUEST FOR ADDRESS VALIDATION LETTER.</string>
    <string name="what_is_e_aadhar_about_uidai">WHAT IS E-AADHAR ABOUT UIDAI?</string>
    <string name="what_is_a_masked_base">WHAT IS A MASKED BASE?</string>
    <string name="what_are_root_devices">WHAT ARE ROOT DEVICES?</string>
    <string name="is_the_physical_copy_of_aadhar_e_aadhar_equally_valid">IS THE PHYSICAL COPY OF AADHAR E-AADHAR EQUALLY VALID?</string>
    <string name="does_linking_my_bank_account_pan_and_other_services_with_aadhar">DOES LINKING MY BANK ACCOUNT, PAN AND OTHER SERVICES WITH AADHAR</string>
    <string name="where_multiple_address_proofs_are_available_to_a_resident_what_proof_will_required">WHERE MULTIPLE ADDRESS PROOFS ARE AVAILABLE TO A RESIDENT, WHAT PROOF WILL REQUIRED?</string>
</resources>