<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/light_yellow"
    tools:context=".AadharPeLoan">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="47dp"
        android:layout_gravity="center"
        android:layout_marginBottom="5dp"
        android:background="@drawable/top_bar"
        android:gravity="center_vertical"
        android:padding="8dp">

        <ImageView
            android:layout_marginLeft="15dp"
            android:id="@+id/aadharloan"
            android:layout_width="27dp"
            android:layout_height="27dp"
            android:layout_gravity="center"
            android:src="@drawable/ic_baseline_arrow_back_ios_24" />

        <TextView
            android:layout_marginLeft="5dp"
            android:layout_weight="5"
            android:textStyle="bold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/aadhar_pe_loan"
            android:textColor="@color/white"
            android:textSize="18dp" />

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="10dp"
        android:layout_marginBottom="15dp">


        <TextView
            android:id="@+id/an1"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:padding="10dp"
            android:background="@drawable/item_view"
            android:layout_margin="10dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/what_is_aadhar"
            android:textStyle="bold"
            android:textAlignment="center"
            android:textColor="@color/blue"/>

        <TextView
            android:id="@+id/an2"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:padding="10dp"
            android:background="@drawable/item_view"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_margin="10dp"
            android:text="@string/update_your_aadhar_details"
            android:textStyle="bold"
            android:textAlignment="center"
            android:textColor="@color/blue"/>

        <TextView
            android:id="@+id/an3"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:padding="10dp"
            android:background="@drawable/item_view"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_margin="10dp"
            android:text="@string/check_your_status"
            android:textStyle="bold"
            android:textAlignment="center"
            android:textColor="@color/blue"/>

        <TextView
            android:id="@+id/an4"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:padding="10dp"
            android:background="@drawable/item_view"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_margin="10dp"
            android:text="@string/update_the_address_in_your_aadhar"
            android:textStyle="bold"
            android:textAlignment="center"
            android:textColor="@color/blue"/>

        <TextView
            android:id="@+id/an5"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:padding="10dp"
            android:background="@drawable/item_view"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_margin="10dp"
            android:text="@string/request_for_address_validation_letter"
            android:textStyle="bold"
            android:textAlignment="center"
            android:textColor="@color/blue"/>

        <TextView
            android:id="@+id/an6"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:padding="10dp"
            android:background="@drawable/item_view"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_margin="10dp"
            android:text="@string/what_is_e_aadhar_about_uidai"
            android:textStyle="bold"
            android:textAlignment="center"
            android:textColor="@color/blue"/>

        <TextView
            android:id="@+id/an7"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:padding="10dp"
            android:background="@drawable/item_view"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_margin="10dp"
            android:text="@string/what_is_a_masked_base"
            android:textStyle="bold"
            android:textAlignment="center"
            android:textColor="@color/blue"/>

        <TextView
            android:id="@+id/an8"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:padding="10dp"
            android:background="@drawable/item_view"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_margin="10dp"
            android:text="@string/what_are_root_devices"
            android:textStyle="bold"
            android:textAlignment="center"
            android:textColor="@color/blue"/>

        <TextView
            android:id="@+id/an9"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:padding="10dp"
            android:background="@drawable/item_view"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_margin="10dp"
            android:text="@string/is_the_physical_copy_of_aadhar_e_aadhar_equally_valid"
            android:textStyle="bold"
            android:textAlignment="center"
            android:textColor="@color/blue"/>

        <TextView
            android:id="@+id/an10"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:padding="10dp"
            android:background="@drawable/item_view"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_margin="10dp"
            android:text="@string/does_linking_my_bank_account_pan_and_other_services_with_aadhar"
            android:textStyle="bold"
            android:textAlignment="center"
            android:textColor="@color/blue"/>

        <TextView
            android:id="@+id/an11"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:padding="10dp"
            android:background="@drawable/item_view"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="40dp"
            android:text="@string/where_multiple_address_proofs_are_available_to_a_resident_what_proof_will_required"
            android:textStyle="bold"
            android:textAlignment="center"
            android:textColor="@color/blue"/>

    </LinearLayout>
    </ScrollView>

</LinearLayout>